--- a/_posts/2024-01-01-welcome.md
+++ b/_posts/2024-01-01-welcome.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Welcome to My Website"
-categories: projects
+categories: research
 image: /images/sample-project.jpg
 excerpt: "This is a sample post to show you how to add your own content to the website."
 ---
@@ -15,17 +15,17 @@ This is a sample post to demonstrate how to add content to your website. You can
 3. Include the front matter at the top with:
    - `layout: post`
    - `title: "Your Title"`
-   - `categories: projects` (or `professional` or `personal`)
+   - `categories: research` (or `industry` or `personal`)
    - `image: /images/your-image.jpg` (optional)
    - `excerpt: "Brief description"`
 
 ## Categories
 
-- `projects`: Shows in the main "Projects" section
-- `professional`: Shows in the "Professional Work" section  
-- `personal`: Shows in the "Personal Projects" section
+- `research`: Shows in the main "Research" section
+- `industry`: Shows in the "Industry Experience" section  
+- `personal`: Shows in the "Other Projects" section
 
-You can add any other category name, and it will appear in the "Personal Projects" section.
+You can add any other category name, and it will appear in the "Other Projects" section.
 
 ## Adding Images
 
